# Music-Genre-Clustering

./: .gitignore  Makefile  README.md  main.py  model.ipynb  pyproject.toml
.dvc/: config
data/: .gitignore  Spotify-2000.csv.dvc  tmp.csv
models/: best-model.pkl
src/: cli.py  main.py
src/api/: controller.py  models.py
src/model_utils/: utils.py
src/optuna/: find_hyperparemeter.py
src/pycaret/: train.py
