[project]
name = "music-genre-clustering"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dvc-gs>=3.0.2",
    "fastapi>=0.124.4",
    "ipykernel>=7.1.0",
    "jupyterlab>=4.5.0",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "scikit-learn>=1.7.2",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "dvc>=3.64.0",
    "jupyterlab>=4.5.0",
    "kagglehub>=0.3.13",
]
