[project]
name = "music-genre-clustering"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dvc-gs>=3.0.2",
    "fastapi>=0.124.4",
    "ipykernel>=7.1.0",
    "jupyterlab>=4.5.0",
    "numba==0.59.1",
    "numpy>=1.19.5, <2.0",
    "pandas<2.2.0",
    "plotly<6.0.0",
    "pycaret>=3.3.2",
    "scikit-learn>=1.4.0",
    "typer>=0.21.0",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "dvc>=3.64.0",
    "jupyterlab>=4.5.0",
    "kagglehub>=0.3.13",
]
